--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "description": "MarkDown",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npm install"
   },
   "keywords": [],
   "author": "",
